--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -63,3 +63,18 @@ header a:hover {
 .card h2 {
     margin-top: 0;
 }
+
+.button {
+    display: inline-block;
+    padding: 10px 20px; /* Adjust padding for better visual */
+    background-color: #e8491d;
+    color: white;
+    border: none; /* Remove default border */
+    text-decoration: none;
+    font-weight: bold;
+    text-transform: uppercase;
+    border-radius: 5px;
+    transition: background-color 0.3s, box-shadow 0.3s;
+    cursor: pointer; /* Cursor pointer */
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+}
