--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    background-color: whitesmoke;
 }
 .container {
     width: 80%;
@@ -10,14 +10,14 @@ body {
     overflow: hidden;
 }
 header {
-    background: white;
-    color: white;
+    background: whitesmoke;
+    color: #181a1c;
     padding-top: 30px;
     min-height: 70px;
-    border-bottom: #e8491d 3px solid;
+    border-bottom: 3px solid #cfbf13;
 }
 header a {
-    color: #ffffff;
+    color: #ABB2BF;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 16px;
@@ -43,38 +43,32 @@ header nav {
     float: right;
     margin-top: 10px;
 }
-header .highlight, header .current a {
-    color: #e8491d;
+header .highlight, .h2, header .current a, h1 {
+    color: #5f5f61;
     font-weight: bold;
 }
 header a:hover {
-    color: #ffffff;
+    color: hotpink;
     font-weight: bold;
 }
 .card {
-    background: #ffffff;
+    background: whitesmoke;
     padding: 20px;
     margin-top: 15px;
     border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    border: 1px solid #ddd;
+    border: 1px solid black;
     margin-bottom: 20px; /* Added bottom margin for separation */
 }
-.card h2 {
+.card h2, h3 {
     margin-top: 0;
+    color: #5f5f61;
+}
+#tomcatStatus a:hover {
+    color: deeppink;
+}
+#tomcatStatus a {
+    color: #5f5f61; /* Sets the color */
+    text-decoration: none !important; /* Removes the underline and ensures it takes precedence */
 }
 
-.button {
-    display: inline-block;
-    padding: 10px 20px; /* Adjust padding for better visual */
-    background-color: #e8491d;
-    color: white;
-    border: none; /* Remove default border */
-    text-decoration: none;
-    font-weight: bold;
-    text-transform: uppercase;
-    border-radius: 5px;
-    transition: background-color 0.3s, box-shadow 0.3s;
-    cursor: pointer; /* Cursor pointer */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-}
+/* Styling for hover effect on the .hdr class */
